# eid-reader

./: .gitignore  .gitmodules  CLAUDE.md  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
.devcontainer/: Dockerfile  connect-device.sh  devcontainer.json
.github/workflows/: ios-build.yml
android/app/: build.gradle  proguard-rules.pro
android/gradle/wrapper/: gradle-wrapper.properties
docs/: architecture.md  dmrtd-api-notes.md  implementation-status.md  security.md  testing.md
lib/: main.dart
lib/app/: app.dart  device_capability_provider.dart  locale_provider.dart  router.dart  theme.dart  theme_mode_provider.dart
lib/core/error/: exceptions.dart
lib/core/image/: image_utils.dart  jpeg2000_decoder.dart  jpeg2000_detector.dart  openjpeg_ffi.dart
lib/core/platform/: fast_nfc_provider.dart  nfc_service.dart  nfc_service_android.dart  nfc_service_stub.dart  pcsc_provider.dart  pcsc_service.dart  pcsc_service_impl.dart  pcsc_service_stub.dart  secure_screen_service.dart
lib/core/services/: debug_log_service.dart  face_detection_service.dart  face_embedding_service.dart  image_quality_analyzer.dart
lib/core/utils/: accessible_colors.dart  country_code_utils.dart  icao_codes.dart  mrz_utils.dart  nv21_utils.dart
lib/l10n/: app_en.arb  app_ko.arb
linux/: CMakeLists.txt
linux/runner/: my_application.cc
native/openjpeg/: CMakeLists.txt  opj_config.h.in  opj_config_private.h.in  opj_flutter.c  opj_flutter.h
test/accessibility/: contrast_test.dart  semantics_test.dart
test/app/: device_capability_provider_test.dart
test/core/image/: image_utils_test.dart  jpeg2000_detector_test.dart
test/core/platform/: pcsc_service_stub_test.dart  secure_screen_service_test.dart
test/core/services/: face_embedding_service_test.dart  image_quality_analyzer_test.dart
test/helpers/: localized_test_app.dart
test/l10n/: localization_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+72 files in other folders)
